--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -1,15 +1,15 @@
 name: Gif Comment
-on: # rebuild any PRs and main branch changes
+on: 
   issues: 
     types: [opened]
 
 jobs:
-  comment: # make sure build/ci work properly
+  comment: 
     if: github.event_name == 'issues'
     runs-on: ubuntu-latest
     steps:
-      - name: Add funny comment
-        uses: Marta83/funny-comment-action@v2
+      - name: Funny comments
+        uses: Marta83/funny-comment-action@v2.1
         id: FunnyComment
         with:
           GUTHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
