--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -12,6 +12,6 @@ jobs:
         uses: Marta83/funny-comment-action@v2.1
         id: FunnyComment
         with:
-          GUTHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }}
           comment_type: 'gif'
